# issue-kit

./: .gitignore  README.md  pyproject.toml
scripts/: release.sh
src/issuekit/: __init__.py  agent_commands.py  agent_skills.py  cli.py  templates.py
src/issuekit/agents/: __init__.py  registry.py
src/issuekit/bundled_commands/: issuekit.change.md  issuekit.coding.md  issuekit.design.md  issuekit.knowledge.md  issuekit.release.md  issuekit.require.md  issuekit.review.md  issuekit.test.md
src/issuekit/bundled_skills/issuekit-change/: SKILL.md
src/issuekit/bundled_skills/issuekit-change/agents/: openai.yaml
src/issuekit/bundled_skills/issuekit-coding/: SKILL.md
src/issuekit/bundled_skills/issuekit-coding/agents/: openai.yaml
src/issuekit/bundled_skills/issuekit-design/: SKILL.md
src/issuekit/bundled_skills/issuekit-design/agents/: openai.yaml
src/issuekit/bundled_skills/issuekit-knowledge/: SKILL.md
src/issuekit/bundled_skills/issuekit-knowledge/agents/: openai.yaml
src/issuekit/bundled_skills/issuekit-release/: SKILL.md
src/issuekit/bundled_skills/issuekit-release/agents/: openai.yaml
src/issuekit/bundled_skills/issuekit-require/: SKILL.md
src/issuekit/bundled_skills/issuekit-require/agents/: openai.yaml
src/issuekit/bundled_skills/issuekit-review/: SKILL.md
src/issuekit/bundled_skills/issuekit-test/: SKILL.md
src/issuekit/bundled_templates/: code-review.md  release-note.md  requirement.md  technical-design.md  test-plan.md
src/issuekit/commands/: init.py  upgrade.py
src/issuekit/knowledge/: __init__.py
(+2 files in other folders)
